--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
   <h4 id="response" style="margin-bottom: 10px;">é a vez do jogador 1 (❌)</h4>
   <table>
     <tr>
-      <td class="casa" id="casa1" onclick="jdv('#casa1')">💠</td>
-      <td class="casa" id="casa2" onclick="jdv('#casa2')">💠</td>
-      <td class="casa" id="casa3" onclick="jdv('#casa3')">💠</td>
+      <td id="casa1" onclick="jdv('#casa1')">💠</td>
+      <td id="casa2" onclick="jdv('#casa2')">💠</td>
+      <td id="casa3" onclick="jdv('#casa3')">💠</td>
     </tr>
     <tr>
-      <td class="casa" id="casa4" onclick="jdv('#casa4')">💠</td>
-      <td class="casa" id="casa5" onclick="jdv('#casa5')">💠</td>
-      <td class="casa" id="casa6" onclick="jdv('#casa6')">💠</td>
+      <td id="casa4" onclick="jdv('#casa4')">💠</td>
+      <td id="casa5" onclick="jdv('#casa5')">💠</td>
+      <td id="casa6" onclick="jdv('#casa6')">💠</td>
     </tr>
     <tr>
-      <td class="casa" id="casa7" onclick="jdv('#casa7')">💠</td>
-      <td class="casa" id="casa8" onclick="jdv('#casa8')">💠</td>
-      <td class="casa" id="casa9" onclick="jdv('#casa9')">💠</td>
+      <td id="casa7" onclick="jdv('#casa7')">💠</td>
+      <td id="casa8" onclick="jdv('#casa8')">💠</td>
+      <td id="casa9" onclick="jdv('#casa9')">💠</td>
     </tr>
   </table>
   <button onclick="restart()" style="margin-top: 20px;">restart</button>
